# nmpc_controller

./: .gitignore  CMakeLists.txt  README.md  package.xml
include/nmpc_controller/: common.h  mpc_queue.h  mpc_wrapper.h  nonlinear_mpc.h  nonlinear_mpc_node.h  parameters.h  parameters_ros.h
launch/: nonlinear_mpc_sim.launch
model/: CMakeCache.txt  CMakeLists.txt  Makefile  README.md  cmake_install.cmake  quadrotor_nmpc.cpp  quadrotor_nmpc_codegen
model/quadrotor_nmpc/: acado_common.h  acado_integrator.c  acado_solver.c
resource/: nmpc_ardrone.yaml
resources/: nmpc_ardrone.yaml
src/: mpc_queue.cpp  mpc_wrapper.cpp  nonlinear_mpc.cpp  nonlinear_mpc_node.cpp  waypoint_publisher_3rd_polynomial.cpp  waypoint_publisher_5rd_polynomial.cpp
